# llmclient

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  pyproject.toml
docs/: futility-circuit-breaker.md  ollama-debugging-playbook.md  profiles.md  storage-and-config-model.md
llmclient/: __init__.py  _breaker_params.py  _config.py  _keys.py  _log.py  _queue.py  _sensor.py
llmclient.egg-info/: PKG-INFO  SOURCES.txt
llmclient/cli/: __init__.py  __main__.py  _call.py  _log.py  _parallel.py  _status.py
llmclient/providers/: __init__.py  anthropic.py  claude_code.py  ollama.py  openai.py
scratch/: pth-xattr-issue.md
scripts/: fit_breaker_params.py
tests/: conftest.py  test_breaker.py  test_client.py  test_keys.py  test_log.py  test_providers.py  test_queue.py
