[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmclient"
version = "0.9.0"
description = "Thin multi-provider LLM client (Anthropic, OpenAI-compatible, Ollama)"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Michael Stenner", email = "mstenner@gmail.com"}]

[project.scripts]
llmc = "llmclient.cli:main"

[project.urls]
Homepage = "https://github.com/michaeldstenner/llmclient"
Repository = "https://github.com/michaeldstenner/llmclient"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
